--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 * Copyright (c) 2020 creativeLabs Łukasz Holeczek
 * License MIT
 -->
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,6 @@
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
     <title>Afiliados | CONAFER</title>
     
-    <script type="text/javascript" src="geopoint.js"></script>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
