--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template">
     <meta name="author" content="Łukasz Holeczek">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwNWt6P3SzQwf4qlUenPgLpD0JPI6XCZc&libraries=places"></script>
     <title>Afiliados | CONAFER</title>
     
     <!--
